force-app/main/default/objects/EMS_TM_Calendar__c/EMS_TM_Calendar__c.object-meta.xml
<CustomObject>
    <description>This Calendar is for Organization Holidays</description>
    <label>Holiday Calendar</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holiday Calendars</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>