force-app/main/default/objects/EMS_TM_Calendar__c/fields/EMS_TM_Calendar_Date__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Calendar_Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>