force-app/main/default/objects/EMS_TM_Calendar__c/fields/EMS_TM_Type_Of_Holiday__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Type_Of_Holiday__c</fullName>
    <label>Type of Holiday</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>