force-app/main/default/objects/EMS_TM_Calendar__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office Location</label>
    <referenceTo>Office_Location__c</referenceTo>
    <relationshipName>Holiday_Calenders</relationshipName>
    <type>Lookup</type>
</CustomField>