force-app/main/default/objects/EMS_TM_Calendar__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EMS_TM_Calendar_Date__c</columns>
    <columns>Location__c</columns>
    <columns>EMS_TM_Type_Of_Holiday__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>