force-app/main/default/objects/EMS_TM_Calendar__c/listViews/India_Calendar.listView-meta.xml
<ListView>
    <fullName>India_Calendar</fullName>
    <columns>NAME</columns>
    <columns>EMS_TM_Calendar_Date__c</columns>
    <columns>EMS_TM_Type_Of_Holiday__c</columns>
    <columns>Office_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Office_Location__c</field>
        <operation>equals</operation>
        <value>Hyderabad - India</value>
    </filters>
    <label>India Calendar</label>
</ListView>