force-app/main/default/objects/EMS_TM_Calendar__c/listViews/US_Holiday_List.listView-meta.xml
<ListView>
    <fullName>US_Holiday_List</fullName>
    <columns>NAME</columns>
    <columns>EMS_TM_Calendar_Date__c</columns>
    <columns>Location__c</columns>
    <columns>EMS_TM_Type_Of_Holiday__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>USA</value>
    </filters>
    <label>US Holiday List</label>
</ListView>